[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/debug/debug_panel.gd" id="1_0q3u3"]

[node name="DebugPanel" type="PanelContainer"]
script = ExtResource("1_0q3u3")
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 10.0
offset_top = 10.0
offset_right = 320.0
offset_bottom = 360.0

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "Debug"

[node name="EnabledCheckBox" type="CheckBox" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Enabled (F2)"

[node name="ShowUICheckBox" type="CheckBox" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Show panel (F1)"

[node name="Sep1" type="HSeparator" parent="Margin/VBox"]
layout_mode = 2

[node name="OverlaysLabel" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "Overlays"

[node name="SquadOverlayCheckBox" type="CheckBox" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Squad overlay (F3)"

[node name="CombatantOverlayCheckBox" type="CheckBox" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Combatant overlay (F4)"

[node name="NavOverlayCheckBox" type="CheckBox" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Navigation overlay (F5)"

[node name="SelectionOverlayCheckBox" type="CheckBox" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Selection overlay (F6)"

[node name="Sep2" type="HSeparator" parent="Margin/VBox"]
layout_mode = 2

[node name="SelectedTargetLabel" type="Label" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Selected: <none>"

[node name="SelectedSquadLabel" type="Label" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Squad: <none>"

[node name="Help" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "Ctrl+Click: select combatant\nPgUp/PgDn: cycle selection\nF9: force-move selected squad (emits signal only)"
autowrap_mode = 3
